--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "WillLuke.nextjs.hasPrompted": true,
+  "cSpell.words": [
+    "Prepass",
+    "superjson",
+    "trpc"
+  ]
 }
