--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dx:next": "run-s migrate-dev db-seed && next dev",
     "dx:prisma-studio": "pnpm prisma-studio",
     "dx": "run-p dx:* --print-label",
-    "dev": "pnpm dx:next",
+    "dev": "yarn dx:next",
     "prebuild": "run-s generate migrate",
     "build": "next build",
     "start": "next start",
